--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 h1 {
     color:hsl(233, 41%, 32%);
     background-color: aquamarine;
